# openapi/openapi.yaml
@@ -56,7 +56,10 @@ paths:
     get:
       summary: Returns all benchmark configs matching the specification
       operationId: benchmarkConfigsGet
-      security: []
+      security:
+        - ApiKeyAuth: []
+        - BearerAuth: []
+        - {}
       parameters:
         - in: query
           name: parent_id
@@ -1363,12 +1366,14 @@ components:
           type: string
         is_private:
           type: boolean
-        name:
-          type: string
-        views:
+        shared_users:
           type: array
           items:
-            $ref: '#/components/schemas/BenchmarkViewConfig'
+            type: string
+          description: space-separated list of emails with which system is shared
+          example: ["hello@gmail.com", "world@gmail.com"]
+        name:
+          type: string
         parent:
           type: string
           description: |
@@ -1377,12 +1382,11 @@ components:
             "the field must be an empty string."
         description:
           type: string
-        shared_users:
+        views:
           type: array
           items:
-            type: string
-          description: space-separated list of emails with which system is shared
-          example: ["hello@gmail.com", "world@gmail.com"]
+            $ref: '#/components/schemas/BenchmarkViewConfig'
+          nullable: true
         type:
           type: string
           description: |
@@ -1419,19 +1423,21 @@ components:
           items:
             type: string
           nullable: true
-      required: [id, is_private, name, views, parent, description]
+      required: [id, is_private, shared_users, name, parent, description]
 
     BenchmarkUpdateProps:
       type: object
       properties:
         is_private:
           type: boolean
-        name:
-          type: string
-        views:
+        shared_users:
           type: array
           items:
-            $ref: '#/components/schemas/BenchmarkViewConfig'
+            type: string
+          description: space-separated list of emails with which system is shared
+          example: ["hello@gmail.com", "world@gmail.com"]
+        name:
+          type: string
         parent:
           type: string
           description: |
@@ -1440,12 +1446,11 @@ components:
             "the field must be an empty string."
         description:
           type: string
-        shared_users:
+        views:
           type: array
           items:
-            type: string
-          description: space-separated list of emails with which system is shared
-          example: ["hello@gmail.com", "world@gmail.com"]
+            $ref: '#/components/schemas/BenchmarkViewConfig'
+          nullable: true
         type:
           type: string
           description: |
